--- a/app/views/backend/incoming_deliveries/index.html.haml
+++ b/app/views/backend/incoming_deliveries/index.html.haml
@@ -1,3 +1,6 @@
+=main_toolbar do |t|
+  -t.new
+
 =kujaku do |k|
-  -k.radio :unconfirmed, :confirmed, :all, :i18n_root=>"labels.criterion_modes."
+  -k.radio :unconfirmed, :confirmed, :all, :i18n_root => "labels.criterion_modes."
 =list
