--- a/app/views/backend/products/_form.html.haml
+++ b/app/views/backend/products/_form.html.haml
@@ -1,9 +1,9 @@
-=field_set do # partie info general de l entité animal
+=field_set do
   =f.input :name
   =f.input :born_at
   =f.input :work_number
   =f.input :number
-  =f.input :description # affiche le champ description formaté en zone de texte
+  =f.input :description
   =f.input :picture
   =image_tag(@product.picture.url(:thumb))
   =f.custom_fields
