continue on Production search conditions.

--- a/app/views/backend/productions/index.html.haml
+++ b/app/views/backend/productions/index.html.haml
@@ -1,6 +1,9 @@
 =kujaku do |k|
   -k.text
-  -k.radio :all, :validated, :draft, :aborted
+  -k.radio :all, :validated, :draft, :aborted, :started
+  -k.criterion do
+    %label=Production.human_attribute_name(:campaign)
+    =select_tag(:campaign_id, options_for_select([[]] + Campaign.all.collect{|u| [u.name, u.id]}, params[:campaign_id]))
   -k.criterion do
     %label=Production.human_attribute_name(:product_nature)
     =select_tag(:product_nature_id, options_for_select([[]] + ProductNature.all.collect{|u| [u.label, u.id]}, params[:product_nature_id]))
