--- a/app/views/backend/productions/show.html.haml
+++ b/app/views/backend/productions/show.html.haml
@@ -1,7 +1,7 @@
 =main_toolbar do |t|
-  -t.edit @activity_watching
+  -t.edit @production
 
 =beehive do |b|
   -b.cell do
-    =attributes_list(@activity_watching) do |l|
+    =attributes_list(@production) do |l|
       -l.attribute :name
