--- a/app/views/backend/products/_form.html.haml
+++ b/app/views/backend/products/_form.html.haml
@@ -1,9 +1,14 @@
 =field_set do
+  =f.referenced_association :nature
+  =f.input :variety
   =f.input :name
   =f.input :born_at
   =f.input :work_number
   =f.input :number
   =f.input :description
+  =f.input :external
+  =f.input :real_quantity
+  =f.input :unit
   =f.input :picture
   =image_tag(@product.picture.url(:thumb))
   =f.custom_fields
