--- a/app/views/backend/productions/_form.html.haml
+++ b/app/views/backend/productions/_form.html.haml
@@ -2,10 +2,10 @@
   =f.referenced_association :activity, :source => :main_activity
   =f.referenced_association :campaign
   =f.referenced_association :product_nature, :source => :producibles
-  =f.input :static_storage, :show => :storage
+  =f.input :static_support, :show => :storage
   =f.input :state
   =f.input :started_at
   =f.input :stopped_at
 
 =field_set(:storage) do
-  =f.referenced_association :storage
+  =f.nested_association(:supports)
