--- a/app/views/backend/plants/_form.html.haml
+++ b/app/views/backend/plants/_form.html.haml
@@ -1,10 +1,10 @@
-=field_set do # partie info general de l entité animal
+=field_set do
   =f.referenced_association :nature, :source => :plants
   =f.input :variety
-  =f.input :name # affiche le champ name de l entité animal avec une infos derriere
+  =f.input :name
   =f.custom_fields
 
-=field_set(:animal_identification) do # partie entrée sortie de l entité animal
+=field_set(:animal_identification) do
   =f.input :work_number
   =f.input :born_at, :as => :date
   =f.referenced_association :owner, :selected => Entity.of_company
@@ -12,4 +12,4 @@
 =field_set(:document) do
   =f.input :picture
   =image_tag(@plant.picture.url(:thumb))
-  =f.input :description # affiche le champ description formaté en zone de texte
+  =f.input :description
