--- a/app/views/backend/productions/_support_fields.html.haml
+++ b/app/views/backend/productions/_support_fields.html.haml
@@ -1,4 +1,3 @@
--production_support ||= f.object
 .nested-fields
   =link_to_remove_nested_association(:support, f)
-  =f.referenced_association(:support, :wrapper_html => {:id => 'support-field'})
+  =f.referenced_association(:storage, :wrapper_html => {:id => 'support-field'})
