--- a/app/views/backend/organic_matters/_form.html.haml
+++ b/app/views/backend/organic_matters/_form.html.haml
@@ -1,2 +1,13 @@
-=field_set do
-  =f.input :name
+=field_set do # partie info general de l entité animal
+  =f.referenced_association :nature, :source => :organic_matters
+  =f.input :variety
+  =f.input :name # affiche le champ name de l entité animal avec une infos derriere
+  =f.input :unit
+  =f.custom_fields
+
+=field_set(:identification) do # partie entrée sortie de l entité animal
+  =f.input :work_number
+  =f.input :identification_number
+  =f.input :born_at, :as => :date
+  =f.input :external
+  =f.referenced_association :owner, :selected => Entity.of_company
