--- a/app/views/backend/productions/index.html.haml
+++ b/app/views/backend/productions/index.html.haml
@@ -9,5 +9,7 @@
     =select_tag(:product_nature_id, options_for_select([[]] + ProductNature.all.collect{|u| [u.label, u.id]}, params[:product_nature_id]))
 
 =main_toolbar do |t|
+  -t.export do |e|
+    -e.landparcel_fertilization_list Time.now.to_s, @fertilization
   -t.new
 =list
