--- a/app/views/backend/land_parcels/_form.html.haml
+++ b/app/views/backend/land_parcels/_form.html.haml
@@ -2,6 +2,6 @@
   =f.input :name
   =f.input :work_number
   =f.input :description, :field => :text
-  =f.input :real_quantity
-  =f.input :unit
+  -#=f.input :real_quantity
+  -#=f.input :unit
   -# input :shape
