--- a/app/views/backend/land_parcels/index.html.haml
+++ b/app/views/backend/land_parcels/index.html.haml
@@ -36,7 +36,7 @@
                   %li=link_to(tl(:divide), {:controller=>:land_parcels, :action=>:divide, :id=>land_parcel.id}, :class=>"icon im-divide")
                   %li=link_to(tl(:update), {:controller=>:land_parcels, :action=>:edit, :id=>land_parcel.id}, :class=>"icon im-edit")
                   %li=link_to(tl(:delete), {:controller=>:land_parcels, :action=>:destroy, :id=>land_parcel.id}, :method=>:delete, "data-confirm" => :are_you_sure_you_want_to_delete, :class=>"icon im-destroy")
-              .area=tl(:x_unit, :quantity=>land_parcel.area_measure, :unit=>land_parcel.area_unit.name)
+              .area=tl(:x_unit, :quantity=>land_parcel.area_measure, :unit=>land_parcel.area_unit)
               .desc=land_parcel.description
               %ul.operations
                 -for operation in land_parcel.operations.find(:all, :conditions=>["COALESCE(moved_on, planned_on) < ? ", session[:viewed_on]], :limit=>5)
