add nested form indicator in product and animal.

--- a/app/views/backend/animals/_form.html.haml
+++ b/app/views/backend/animals/_form.html.haml
@@ -21,7 +21,7 @@
   =image_tag(@animal.picture.url(:thumb))
   =f.input :description # affiche le champ description formaté en zone de texte
 
-
-
+=field_set(:indicator) do
+  =f.nested_association(:indicator_data)
 
   
