--- a/app/views/backend/product_indicator_data/_form.html.haml
+++ b/app/views/backend/product_indicator_data/_form.html.haml
@@ -1,6 +1,5 @@
 =field_set do
   =f.referenced_association :product
-  =f.referenced_association :indicator
-  =f.input :description
+  =f.input :indicator
   =f.input :created_at
   =f.input :value
