--- a/app/views/backend/products/_form.html.haml
+++ b/app/views/backend/products/_form.html.haml
@@ -10,6 +10,7 @@
   =f.input :picture
   =image_tag(@product.picture.url(:thumb))
   =f.custom_fields
-  
-=field_set(:indicator) do
-  =f.nested_association(:indicator_data)
+
+-if @product.new_record?
+  =field_set(:indicator) do
+    =f.nested_association(:indicator_data)
