--- a/app/views/backend/land_parcel_clusters/_form.html.haml
+++ b/app/views/backend/land_parcel_clusters/_form.html.haml
@@ -1,4 +1,5 @@
 =field_set do
+  =f.referenced_association :variant, :source => :land_parcel_clusters
   =f.input :name
   =f.input :work_number
   =f.input :description, :field => :text
