--- a/app/views/backend/organic_matters/_form.html.haml
+++ b/app/views/backend/organic_matters/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do # partie info general de l entité animal
-  =f.referenced_association :nature, :source => :organic_matters
+  =f.referenced_association :variant, :source => :organic_matters
   =f.input :variety
   =f.input :name # affiche le champ name de l entité animal avec une infos derriere
   =f.input :unit
