--- a/app/views/backend/plant_medicines/_form.html.haml
+++ b/app/views/backend/plant_medicines/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do # partie info general de l entité animal
-  =f.referenced_association :nature, :source => :plant_medicines
+  =f.referenced_association :variant, :source => :plant_medicines
   =f.input :variety
   =f.input :name # affiche le champ name de l entité animal avec une infos derriere
   =f.custom_fields
