--- a/app/views/backend/plants/_form.html.haml
+++ b/app/views/backend/plants/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do
-  =f.referenced_association :nature, :source => :plants
+  =f.referenced_association :variant, :source => :plants
   =f.input :variety
   =f.input :name
   =f.custom_fields
