--- a/app/views/backend/land_parcel_groups/_form.html.haml
+++ b/app/views/backend/land_parcel_groups/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set(:major => true) do
-  =f.referenced_association :nature
+  =f.referenced_association :variant, :source => :land_parcel_groups
   =f.input :name
   =f.input :work_number
   =f.input :description, :field => :text
