--- a/app/views/backend/land_parcels/_form.html.haml
+++ b/app/views/backend/land_parcels/_form.html.haml
@@ -1,4 +1,5 @@
 =field_set do
+  =f.referenced_association :variant, :source => :land_parcels
   =f.input :name
   =f.input :work_number
   =f.input :description, :field => :text
