--- a/app/views/backend/matters/_form.html.haml
+++ b/app/views/backend/matters/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do # partie info general de l entité animal
-  =f.referenced_association :nature, :source => :matters
+  =f.referenced_association :variant, :source => :matters
   =f.input :name # affiche le champ name de l entité animal avec une infos derriere
   =f.input :reproductor
   =f.input :work_number
