--- a/app/views/backend/product_nature_variants/_form.html.haml
+++ b/app/views/backend/product_nature_variants/_form.html.haml
@@ -1,2 +1,16 @@
 =field_set do
+  =f.referenced_association :nature
   =f.input :name
+  =f.input :active
+  =f.input :commercial_name
+  =f.input :commercial_description
+  =f.input :contour
+  =f.input :horizontal_rotation
+
+=field_set(:indicator) do
+  =f.input :purchase_indicator
+  =f.input :purchase_indicator_unit
+  =f.input :sale_indicator
+  =f.input :sale_indicator_unit
+  =f.input :usage_indicator
+  =f.input :usage_indicator_unit
