fixes model's bug and add field in activities

--- a/app/views/backend/activities/show.html.haml
+++ b/app/views/backend/activities/show.html.haml
@@ -8,3 +8,7 @@
       -l.attribute :parent
       -l.attribute :nature
       -l.attribute :family
+
+  -b.tabbox do
+    -b.cell(:productions) do
+      =list(:production)
