Renames remaining landparcel => land_parcel

--- a/app/views/backend/land_parcels/index.html.haml
+++ b/app/views/backend/land_parcels/index.html.haml
@@ -16,7 +16,7 @@
       =list
 
 -#unit = Unit.find_by_base("m2")
--# TODO Review presentation of landparcels
+-# TODO Review presentation of land_parcels
 -#=form_tag do
   -LandParcelGroup.find_each do |group|
     -total_area = group.area(session[:viewed_on], unit)
