--- a/app/views/backend/land_parcels/show.html.haml
+++ b/app/views/backend/land_parcels/show.html.haml
@@ -6,12 +6,10 @@
   -b.tabbox do
     -b.cell :general do
       .picture
-        -#=@land_parcel.bounds.inspect
-        %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => @land_parcel.view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "180", :height => "180"}
-          %path{:d => @land_parcel.shape_svg_path}
+        =@land_parcel.shape_svg(:width => 180, :height => 180, :class => :map)
       .info
         %span.title=LandParcel.human_attribute_name(:area_measure)
-        %span.value=@land_parcel.area_measure.value + " " + @land_parcel.area_measure.measure_unit
+        %span.value=@land_parcel.area_measure.value + " " + @land_parcel.area_measure.measure_unit # value.l(:unit => @land_parcel.area_measure.measure_unit)
 
 
     -b.cell do
