--- a/app/views/backend/land_parcel_clusters/index.html.haml
+++ b/app/views/backend/land_parcel_clusters/index.html.haml
@@ -8,10 +8,10 @@
 =beehive do |b|
   -b.tabbox do
     -b.cell :map do
-      %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => LandParcelCluster.view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "100%", :height => "400px", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
+      %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => LandParcelCluster.shape_view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "100%", :height => "400px", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
         -LandParcelCluster.find_each do |land_parcel_cluster|
           %a{'xlink:href' => backend_land_parcel_cluster_url(land_parcel_cluster)}
-            %path{:d => land_parcel_cluster.shape_svg_path, :title => land_parcel_cluster.name}
+            %path{:d => land_parcel_cluster.shape_as_svg, :title => land_parcel_cluster.name}
     -b.cell :list do
       =list
 
