--- a/app/views/backend/land_parcel_groups/show.html.haml
+++ b/app/views/backend/land_parcel_groups/show.html.haml
@@ -5,9 +5,7 @@
   -b.tabbox do
     -b.cell :general do
       .picture
-        -#=@land_parcel.bounds.inspect
-        %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => @land_parcel_group.view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "180", :height => "180"}
-          %path{:d => @land_parcel_group.shape_svg_path}
+        =@land_parcel_group.shape_svg(:width => 180, :height => 180, :class => :map)
       .info
         %span.title=LandParcelGroup.human_attribute_name(:area_measure)
         %span.value=@land_parcel_group.area_measure.value + " " + @land_parcel_group.area_measure.measure_unit
