--- a/app/views/backend/entities/_phone_fields.html.haml
+++ b/app/views/backend/entities/_phone_fields.html.haml
@@ -1,6 +1,6 @@
 -# Generated automatically. Don't edit this file.
 -entity_address ||= f.object
 .nested-fields
-  =link_to_remove_association('labels.remove_phone'.t, f, 'data-no-turbolink' => true, :class => 'nested-remove remove-phone')
+  =link_to_remove_nested_association(:phone, f)
   =f.input(:canal, :as => :hidden, :wrapper_html => {:id => 'canal-field'})
   =f.input(:coordinate, :as => :tel, :label => I18n.translate("enumerize.entity_address.canal.phone"), :wrapper_html => {:id => 'coordinate-field'})
