--- a/app/views/backend/product_groups/show.html.haml
+++ b/app/views/backend/product_groups/show.html.haml
@@ -1,11 +1,34 @@
 =main_toolbar do |t|
   -t.edit @product_group
-  -t.print_entity @product_group
   -t.destroy(@product_group, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @product_group.destroyable?
 
 =beehive do |b|
   -b.cell :details do
     =attributes_list(@product_group) do |l| # liste des champs à afficher
       -l.attribute :name
+      -l.attribute :variety, :url => true
+      -l.attribute :identification_number
       -l.attribute :description
+    -if @product_group.picture.exists?
+      =image_tag(@product_group.picture.url(:thumb))
+
+  -b.tabbox do
+    -b.cell(:members) do
+      =list(:member)
+    -b.cell(:groups) do
+      =list(:group)
+
+  -b.tabbox do
+    -b.cell(:content_products) do
+      =list(:content_product)
+    -b.cell(:places) do
+      =list(:place)
+
+  -b.tabbox do
+    -b.cell(:incidents) do
+      =toolbar do |t|
+        -t.new(:params =>{:controller => :incidents, :target_id => @product_group.id, :target_type => @product_group.class.name})
+      =list(:incident)
+    -b.cell(tl(:x_indicators, :count => @product_group.indicator_data.count)) do
+      =list(:indicator)
 
