--- a/app/views/backend/building_divisions/show.html.haml
+++ b/app/views/backend/building_divisions/show.html.haml
@@ -2,6 +2,15 @@
   -t.edit @building_division
 
 =beehive do |b|
-  -b.cell do
-    =attributes_list(@building_division) do |l|
-      -l.attribute :name
+  -b.tabbox do
+    -b.cell :general do
+      =attributes_list(@building_division) do |l|
+        -l.attribute :name
+        -l.attribute :work_number
+    -b.cell do
+      .picture
+        =@building_division.shape_svg(:width => 180, :height => 180, :class => :map)
+
+  -b.tabbox do
+    -b.cell(:content_products) do
+      =list(:content_product)
