--- a/app/themes/tekyla/stylesheets/beehive.css.scss
+++ b/app/themes/tekyla/stylesheets/beehive.css.scss
@@ -56,6 +56,11 @@
         @include clearfix;
 	// overflow-x: auto;
         height: auto;
+
+	> .toolbar {
+          @include margin-left($default-gap);
+        }
+
       }
     }
 
