--- a/app/views/backend/listings/_nodes_form.html.haml
+++ b/app/views/backend/listings/_nodes_form.html.haml
@@ -1,5 +1,5 @@
 -unless @listing.new_record?
-  -toolbar do |t|
-    -t.extract @listing, :params=>{:format=>:csv}
-    -t.link :mail, {}, :i18n=>{:name=>@listing.name} if @listing.mail_columns.size > 0
+  =toolbar do |t|
+    -t.extract @listing, :params => {:format=>:csv}
+    -t.mail(@listing, :i18n=>{:name=>@listing.name}) if @listing.can_mail?
   %ul.tree=render :partial=>"backend/listings/node", :object => @listing.root
